--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-twitter.consumerKey=<<CHANGE ME>>
-twitter.consumerSecret=<<CHANGE ME>>
-twitter.accessToken=<<CHANGE ME>>
-twitter.accessTokenSecret=<<CHANGE ME>>
+twitter.consumerKey=cRGW6UJbSH2SJ213akS9y8N4U
+twitter.consumerSecret=8seNqxSJ86p1GlaHitC8gDd7ZLvdGe65gzpWCFK9bRn5U65QJM
+twitter.accessToken=103428008-1Jmjk9pObfzNATO942BlULJhvMfraccRNVSr2BoD
+twitter.accessTokenSecret=8ozWjN6NLCQb9bBsobn0nQllTds7ayZ27P6ViTjyHIn8X
 
